welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not enough arguments for method ligne_motif: (n: Int)Unit.
Unspecified value parameter n.
		ligne_motif()
                           ^MethodsPicture:7: error: not found: value avancer
		avancer(5)
                ^